--- a/Views/Index.ejs
+++ b/Views/Index.ejs
@@ -27,11 +27,11 @@
                   
                   </div> -->
                   <div class="mb-3">
-                    <input type="text" class=" custom_form  w-100" id="floatingName" placeholder="username">
+                    <input type="text" class=" custom_form  w-100" id="floatingName" placeholder="username" name="username">
                  
                   </div>
                   <div class="mb-3">
-                    <input type="password" class="custom_form w-100" id="floatingPassword" placeholder="Password">
+                    <input type="password" class="custom_form w-100" id="floatingPassword" placeholder="Password" name ="password">
               
                   </div>
                   <div class="mb-3 form-check">
