--- a/Views/Register.ejs
+++ b/Views/Register.ejs
@@ -23,19 +23,19 @@
               <h2 class=" text-center">User Register</h2>
               <form action="/user/Register" method="post">
                 <div class="mb-3">
-                    <input type="email" class="custom_form w-100" id="floatingInput" placeholder="Enter your email" name="email">
+                    <input type="email" class="custom_form w-100"  placeholder="Enter your email" name="email">
                   
                   </div>
                 <div class="mb-3">
-                    <input type="text" class="custom_form w-100" id="floatingInput" placeholder="Enter your phone number" name="phone">
+                    <input type="text" class="custom_form w-100" placeholder="Enter your phone number" name="number">
                   
                   </div>
                   <div class="mb-3">
-                    <input type="text" class=" custom_form  w-100" id="floatingName" placeholder="username" name="username">
+                    <input type="text" class=" custom_form  w-100"  placeholder="username" name="username">
                  
                   </div>
                   <div class="mb-3">
-                    <input type="password" class="custom_form w-100" id="floatingPassword" placeholder="Password" name="Password">
+                    <input type="password" class="custom_form w-100"  placeholder="Password" name="password">
               
                   </div>
                   <div class="mb-3 form-check">
