--- a/Views/Home.ejs
+++ b/Views/Home.ejs
@@ -1,11 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%-include ('./Header.ejs') %>
 <body>
-    <h1>this is home page</h1>
+   <section>
+    <div class="container">
+        <div class="row">
+            <% if (locals.data) { %>
+                
+                <% data.forEach(element => { %>
+                    
+                    <div class="col-lg-3 mt-4">
+                   
+                         <div class="book_card ">
+                            <div class="book_img">
+                                <a href=<%= element.website%>>    <img src=<%= element.image%> alt="image" class="img-fluid">
+                            </div>
+                        </a>
+                            <div class="title ">
+                               <b>Title:</b> <%= element.title%>
+                            </div>
+                            <div class="subtitle">
+                                <b>Subtitle:</b>  <%= element.subtitle%>
+                            </div>
+                            <div class="author">
+                                <b>Author:</b>  <%= element.author%>
+                            </div>
+                            <div class="publisher">
+                                <b>Publisher:</b> <%= element.publisher%>
+                            </div>
+                            <div class="pages">
+                                <b>Pages:</b><%= element.pages%>
+                            </div>
+                            <div class="website">
+                             
+                            </div>
+                        </div>
+        
+                    </div>
+                  <% }); %>
+              
+              <% } %>
+         
+        </div>
+    </div>
+   </section>
+   
 </body>
 </html>
