--- a/public/Style/style.css
+++ b/public/Style/style.css
@@ -22,8 +22,18 @@ margin-top: 20px;
     box-shadow: 0px 0px 5px grey;
     padding: 25px 15px ;
 }
-
+.book_card{
+    box-shadow: 0px  0px 3px grey;
+    border-radius: 10px ;
+}
 
 .labels{
     padding: 0px !important;
+}
+
+.book_img img{
+    width: 100%;
+     height: 280px;
+    object-fit: fill;
+    border-radius: 10px 10px 0px 0px ;
 }
