--- a/Frontend/src/component/Style.css
+++ b/Frontend/src/component/Style.css
@@ -38,3 +38,19 @@ margin-top: 20px;
     object-fit: fill;
     border-radius: 10px 10px 0px 0px ;
 }
+.popup_parent{
+    position: relative;
+    margin-top: 30px;
+    
+}
+.popup_design{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    
+    background: whitesmoke;
+    transform: translate(-50%,-50%);
+    padding: 30px;
+    box-shadow: 0px 0px 10px grey;
+}
